tests/ui/invalid-ident.stderr
thread 'rustc' panicked at '`"0f"` is not a valid identifier', compiler/rustc_expand/src/proc_macro_server.rs:332:13
note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace

error: internal compiler error: unexpected panic

note: the compiler unexpectedly panicked. this is a bug.

note: we would appreciate a bug report: https://github.com/rust-lang/rust/issues/new?labels=C-bug%2C+I-ICE%2C+T-compiler&template=ice.md

note: rustc 1.48.0-nightly (80fc9b0ec 2020-09-02) running on x86_64-unknown-linux-gnu

note: compiler flags: -C embed-bitcode=no -C debuginfo=2 -C incremental --crate-type bin

note: some of the compiler flags provided by cargo are hidden

error: `"0f"` is not a valid identifier
 --> $DIR/invalid-ident.rs:4:8
  |
4 |     fn [<0 f>]() {}
  |        ^^^^^^^
